--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -12,34 +12,13 @@
 }
 
 .getting-started {
+  background-color: #161616;
   max-width: 74.25rem;
   padding-top: 2.375rem;
   padding-bottom: 3rem;
 
-  .card {
-    border: .0625rem solid #E373BE;
-
-    a {
-      background-color: #161616;
-      transition: background-color .15s ease-out;
-    }
-
-    h4 {
-      font-size: 1.75rem;
-      font-weight: 300;
-      line-height: 1.2;
-    }
-
-    &:hover {
-
-      a {
-        background-color: rgb(209,77,171);
-        background-color: -moz-linear-gradient(45deg, rgba(209,77,171,1) 0%, rgba(139,63,251,1) 100%);
-        background-color: -webkit-linear-gradient(45deg, rgba(209,77,171,1) 0%, rgba(139,63,251,1) 100%);
-        background-color: linear-gradient(45deg, rgba(209,77,171,1) 0%, rgba(139,63,251,1) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d14dab",endColorstr="#8b3ffb",GradientType=1);
-      }
-    }
+  .card a {
+    background: none;
   }
 
   h5 {
@@ -71,7 +50,6 @@
 
   h5 {
     font-size: 1.25rem;
-    font-weight: 600;
   }
 }
 
