responsive and ethics and ryan edits

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,3 +91,20 @@
 //     // margin-bottom: 1.5rem;
 //   }
 // }
+.show-on-small {
+  display: none;
+}
+
+.hide-on-small {
+  display: block;
+}
+
+@media (max-width: 672px) {
+  .show-on-small {
+    display: block;
+  }
+
+  .hide-on-small {
+    display: none;
+  }
+}
