--- a/src/components/HomepageVideo/homepage-video.scss
+++ b/src/components/HomepageVideo/homepage-video.scss
@@ -1,5 +1,10 @@
 .white {
   color: white;
+  font-size: 1.25rem;
+}
+
+.mission {
+  margin-bottom: 2rem;
 }
 
 .#{$prefix}--homepage-video-container {
@@ -101,9 +106,9 @@
 
   &:hover {
     background: rgb(209,77,171);
-    background: -moz-linear-gradient(45deg, rgba(209,77,171,.85) 0%, rgba(139,63,251,.85) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(209,77,171,.85) 0%, rgba(139,63,251,.85) 100%);
-    background: linear-gradient(45deg, rgba(209,77,171,.85) 0%, rgba(139,63,251,.85) 100%);
+    background: -moz-linear-gradient(45deg, rgba(209,77,171,.8) 0%, rgba(139,63,251,.8) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(209,77,171,.8) 0%, rgba(139,63,251,.8) 100%);
+    background: linear-gradient(45deg, rgba(209,77,171,.8) 0%, rgba(139,63,251,.8) 100%);
     color: $carbon--gray-100;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d14dab",endColorstr="#8b3ffb",GradientType=1);
     text-decoration: none;
