--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,38 +62,42 @@
 //---------------------------------------
 // IDL components
 //---------------------------------------
-// .#{$prefix}--grid {
-//   h2 {
-//     font-size: 3rem;
-//     font-weight: 300;
-//     margin-top: 5rem;
-//     margin-bottom: 1.5rem;
-//   }
-//
-//   h3 {
-//     font-size: 1.75rem;
-//     font-weight: 300;
-//     margin-top: 3rem;
-//     margin-bottom: 1rem;
-//   }
-//
-//   h4 {
-//     margin-top: 2rem;
-//     margin-bottom: 0;
-//   }
-//
-//   p {
-//     line-height: 1.8;
-//     margin-bottom: 1.5rem;
-//   }
-//
-//   li:not(:last-of-type):not(.bx--anchor-links__item) {
-//     // margin-bottom: 1.5rem;
-//   }
-// }
+.#{$prefix}--grid {
+  h2 {
+    // font-weight: 600;
+    margin-top: $spacing-09 * 2.25;
+  }
+
+  h3 {
+    // font-weight: 600;
+    margin-top: $spacing-08;
+  }
+
+  .gatsby-resp-image-wrapper {
+    margin: 3rem 0;
+  }
+  //
+  // h4 {
+  //   margin-top: 2rem;
+  //   margin-bottom: 0;
+  // }
+  //
+  // p {
+  //   line-height: 1.8;
+  //   margin-bottom: 1.5rem;
+  // }
+  //
+  // li:not(:last-of-type):not(.bx--anchor-links__item) {
+  //   // margin-bottom: 1.5rem;
+  // }
+}
 
 li {
-  font-size: 14px;
+  // font-size: 14px;
+}
+
+img {
+  margin-bottom: 3rem;
 }
 
 .show-on-small {
