--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -17,6 +17,13 @@
     background: none;
   }
 
+  .card .gatsby-resp-image-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: inherit;
+  }
+
   h5 {
     font-size: 1.25rem;
   }
