--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -65,7 +65,7 @@
 .#{$prefix}--grid {
   h2 {
     // font-weight: 600;
-    margin-top: $spacing-09 * 2.25;
+    margin-top: $spacing-09 * 1.5;
   }
 
   h3 {
@@ -76,20 +76,6 @@
   .gatsby-resp-image-wrapper {
     margin: 3rem 0;
   }
-  //
-  // h4 {
-  //   margin-top: 2rem;
-  //   margin-bottom: 0;
-  // }
-  //
-  // p {
-  //   line-height: 1.8;
-  //   margin-bottom: 1.5rem;
-  // }
-  //
-  // li:not(:last-of-type):not(.bx--anchor-links__item) {
-  //   // margin-bottom: 1.5rem;
-  // }
 }
 
 li {
@@ -108,6 +94,7 @@ img {
 }
 
 .bx--caption {
+  margin-top: -3rem;
   margin-bottom: 3rem;
 }
 
