--- a/src/pages/ethics/ethics.scss
+++ b/src/pages/ethics/ethics.scss
@@ -20,8 +20,12 @@ blockquote {
 
 .ethics-cta {
   .gatsby-resp-image-wrapper {
-    margin: 1rem auto 0 auto !important;
+    margin: 0 !important;
   }
+}
+
+aside {
+  margin-top: .75rem;
 }
 
 .quote {
