--- a/src/components/HomepageVideo/homepage-video.scss
+++ b/src/components/HomepageVideo/homepage-video.scss
@@ -1,6 +1,13 @@
 .white {
   color: white;
   font-size: 1.25rem;
+  font-size: calc(1.25rem + 0*(100vw - 20rem)/62);
+}
+
+@media (min-width: 99rem) {
+  .white {
+    font-size: 1.5rem;
+  }
 }
 
 .mission {
