more list styling

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,7 +92,7 @@ img {
   margin-left: 1rem;
 
   .#{$prefix}--list__item {
-    padding-left: .5rem !important;
+    padding-left: 0 !important;
   }
 }
 
